FIX: (_minor) -- Button iOS color changed

--- a/src/app/change-color/change-color.component.scss
+++ b/src/app/change-color/change-color.component.scss
@@ -25,6 +25,7 @@
     z-index: 11;
     position: relative;
     background-color: #fff;
+    color: inherit;
     height: 40px;
     width: 126px;
 
